--- a/Counter/index.html
+++ b/Counter/index.html
@@ -13,6 +13,6 @@
         <button id="reset" class="button">RESET</button>
         <button id="increase" class="button">INCREASE</button>
     </div>
-    <style src="./script.js"></style>
+    <script src="./script.js"></script>
 </body>
 </html>
