--- a/Counter/index.html
+++ b/Counter/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>Counter</h1>
     <div class="counter">
         <label id="counterlabel">0</label><br>
         <button id="decrease" class="button">DECREASE</button>
